Filters: Added size and overlap filters Other bug fixes and UI improvements

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,8 @@ th {
   background: #efefef;
   box-shadow: 0px 10px 30px -12px rgba(0,0,0,1);
   margin: 10px 30px 10px 10px !important;
-  padding: 10px 0px 15px 0px !important;
+  padding: 10px 20px 15px 0px !important;
+  width: 100%;
 }
 
 .filter-input {
