--- a/styles/modals.css
+++ b/styles/modals.css
@@ -53,7 +53,7 @@
 }
 
 #filter-modal .modal-container {
-  width: 40vw;
+  width: 45vw;
   height: 100vh;
   margin: 0px auto;
   padding: 20px 30px;
